fix front page logo width on safari

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -156,7 +156,6 @@ ul.main-menu {
 
         img {
             object-fit: contain;
-            width: auto;
         }
     }
 
